fixed task overflow bug

--- a/css/todolist.css
+++ b/css/todolist.css
@@ -1,12 +1,3 @@
-#appContainer {
-  max-width: 550px;
-  margin: 0 auto;
-  background-color: white;
-  border-radius: 10px;
-  padding: 1rem;
-  text-align: left;
-}
-
 .itemContainer,
 #inputContainer,
 .taskDiv {
@@ -32,11 +23,9 @@
   margin: 0.25rem;
 }
 
-.ui {
-  font-family: 'open sans';
-}
-
 #todoAppRoot {
+  max-width: 500px;
+  margin: 0 auto;
 }
 
 .priorityDiv,
@@ -47,6 +36,14 @@
 .taskDiv {
   flex-grow: 2;
   line-height: 1.5rem;
+  max-width: 500px;
+  overflow: hidden;
+  overflow-x: auto;
+}
+
+.task {
+  font-size: 1.5rem;
+  max-width: 100%;
 }
 
 .reportingContainer {
@@ -145,15 +142,6 @@
 }
 .complete {
   color: grey;
-}
-
-.task {
-  margin: 0 1rem;
-  font-size: 1.5rem;
-}
-
-.taskInput {
-  /*margin: 0 1rem;*/
 }
 
 form {
